# ClassGaurd

./: .gitignore
classguard/: README.md  docker-compose.yml
classguard/ai-service/: Dockerfile  requirements.txt
classguard/ai-service/app/: classifier.py  main.py
classguard/backend/: backend_err.txt  backend_log.txt  requirements.txt
classguard/backend/app/: main.py
classguard/backend/app/api/: ai_events.py  auth.py  disable_requests.py  monitoring.py  students.py
classguard/backend/app/core/: classifier.py  config.py  database.py  deps.py  security.py
classguard/backend/app/models/: __init__.py  device.py  disable_request.py  faculty.py  monitoring_log.py  monitoring_session.py  student.py  warning.py
classguard/backend/app/schemas/: auth.py  disable_request.py  monitoring.py  student.py
classguard/backend/app/ws/: manager.py  routes.py
classguard/backend/static/: test_render.py
classguard/desktop-agent/: agent_app.py  package-lock.json  requirements.txt
classguard/desktop-agent/src-tauri/: Cargo.toml  tauri.conf.json
classguard/desktop-agent/src-tauri/src/: commands.rs  lib.rs  logger.rs  main.rs  notifications.rs  screen_capture.rs  ws_client.rs
classguard/desktop-agent/web-ui/: index.html  package-lock.json  package.json
classguard/desktop-agent/web-ui/src/: App.tsx  DashboardView.tsx  SetupView.tsx  styles.css
classguard/frontend/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
classguard/frontend/src/: App.tsx
classguard/frontend/src/components/: AddStudentModal.tsx  ConfirmDialog.tsx  StatCard.tsx  (+2 more)
(+5 files in other folders)
