[package]
name = "classguard-agent"
version = "1.0.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
tungstenite = "0.24"
url = "2"
notify-rust = "4"
chrono = "0.4"
winapi = { version = "0.3", features = ["winuser", "libloaderapi"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[lib]
name = "classguard_agent_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
